-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1, 6.6.0
-
-
8753bb304 (dev), 89dd5ab63 (6.6), 3bd6e1697 (tqtc/lts-6.5)
Displaying large text in a QMessageBox no longer works in Qt6.5 or latter. This used to work with Qt6.4 and Qt5.
Attached example reproduces this:
Run the example and click on window to see MessageBox.
For Gerrit Dashboard: QTBUG-118992 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
517035,2 | Cocoa MessageBox: don't use native message box if detailed text is set | dev | qt/qtbase | Status: MERGED | +2 | 0 |
517403,3 | Cocoa MessageBox: don't use native message box if detailed text is set | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
517581,2 | Cocoa MessageBox: don't use native message box if detailed text is set | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |